--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
       name="description"
       content="DARIPADA NGONTRAK LEBIH BAIK CICIL RUMAH!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:URL" content="%PUBLIC_URL%/logo.ico" />
+
+<meta property="og:type" content="article" />
+    
+<meta property="og:title" content="DARIPADA NGONTRAK LEBIH BAIK CICIL RUMAH" />
+    
+<meta property="og:description" content="DP 0% CICILAN 1JT" />
+
+<meta property="og:image" content="%PUBLIC_URL%/logo.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Karanganyar Residence</title>
   </head>
